--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,34 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kaskavalci.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Links
-# email: your-email@example.com
+email: contact@halil.kaskavalci.com
 github_username: kaskavalci
 linkedin_username: kaskavalci
 # twitter_username: your-twitter-username
 # resume_url: "/assets/resume.pdf"
 blog_url: "https://blog.kaskavalci.com"
+
+# Portfolio Projects
+# Add your projects here. Each project should have:
+# - title: The name of your project
+# - description: A brief description of what the project does
+# - demo_url: (optional) Link to live demo
+# - github_url: (optional) Link to GitHub repository
+portfolio:
+  - title: "Montessori Shopping List"
+    image_url: "https://montessori-shopping-list.kaskavalci.com/gnome-logo.jpg"
+    description: "AI assisted shopping list for kids"
+    demo_url: "https://montessori-shopping-list.kaskavalci.com"
+    # github_url: "https://github.com/username/project-one"
+
+  # - title: "Project Two"
+  #   description: "An innovative mobile app that solves real-world problems."
+  #   demo_url: "https://example.com"
+  #   github_url: "https://github.com/username/project-two"
+
+  # - title: "Project Three"
+  #   description: "A backend service with RESTful API and microservices architecture."
+  #   github_url: "https://github.com/username/project-three"
 
 # Build settings
 plugins:
